// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmptyState Full height 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-lg pf-m-full-height"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Header with icon 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state__header"
  >
    <div
      class="pf-v6-c-empty-state__icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0  "
        width="1em"
      >
        <path />
      </svg>
    </div>
    <div
      class="pf-v6-c-empty-state__title"
    >
      <h1
        class="pf-v6-c-empty-state__title-text"
      >
        Empty state
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            HTTP Proxies
          </h1>
        </div>
      </div>
      <div
        class="pf-v6-c-empty-state__body"
      >
        Defining HTTP Proxies that exist on your network allows you to perform various actions through those proxies.
      </div>
      <div
        class="pf-v6-c-empty-state__footer"
      >
        <div
          class="pf-v6-c-empty-state__actions"
        >
          <button
            class="pf-v6-c-button pf-m-primary"
            data-ouia-component-id="OUIA-Generated-Button-primary-:r0:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              New HTTP Proxy
            </span>
          </button>
        </div>
        <div
          class="pf-v6-c-empty-state__actions"
        >
          <button
            aria-label="learn more action"
            class="pf-v6-c-button pf-m-link"
            data-ouia-component-id="OUIA-Generated-Button-link-:r1:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__text"
            >
              Learn more about this in the documentation.
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant large 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-lg"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState large
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant small 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-sm"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmptyState Main variant xs 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-empty-state pf-m-xs"
  >
    <div
      class="pf-v6-c-empty-state__content"
    >
      <div
        class="pf-v6-c-empty-state__header"
      >
        <div
          class="pf-v6-c-empty-state__title"
        >
          <h1
            class="pf-v6-c-empty-state__title-text"
          >
            EmptyState extra small
          </h1>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
